fix(ZNTA-2706) alignment of react editor header nav arrows

--- a/server/zanata-frontend/src/app/editor/containers/Root/index.css
+++ b/server/zanata-frontend/src/app/editor/containers/Root/index.css
@@ -693,7 +693,7 @@ h4.modal-title {
 }
 
 .Editor-mainNav .Dropdown-toggleIcon {
-  vertical-align: middle;
+  vertical-align: sub;
 }
 
 .icon-history svg, .icon-comment svg {
